# stocks

./: README.md  docker-compose.yml
client/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/.docker/: Dockerfile
client/src/: App.tsx  main.css  vite-env.d.ts
client/src/config/: index.ts
client/src/hooks/: useDebounce.ts  useDisclosure.ts  usePage.ts  usePaginatedQuery.ts  useSelectedItems.ts
client/src/lib/: auth.tsx  openai.ts  react-query.ts  result.ts  wretch.ts
client/src/providers/: app.tsx
client/src/routes/: index.tsx  protected.tsx  public.tsx
client/src/schemas/: index.ts
client/src/types/: index.ts
client/src/utils/: api.test.ts  api.ts  browser.ts  date.test.ts  date.ts  error.ts  generator.test.ts  generator.ts  list.test.ts  list.ts  number.ts  object.ts  split.ts  storage.ts  string.ts  time.ts
fake/: .env  Cargo.toml
fake/.docker/: Dockerfile
fake/data/: ss.csv  stocks.csv
fake/src/: asset.rs  generate.rs  main.rs  utils.rs
fake/src/db/: mod.rs
fake/src/db/queries/: function.rs  mod.rs  table.rs  view.rs
nginx/: default.conf
server/: composer.json  docker-compose.yml
server/.docker/: Dockerfile
server/app/Console/: Kernel.php
server/app/Exceptions/: Handler.php
server/app/Http/: Kernel.php
server/app/Models/: Crypto.php  LastCryptoPrice.php  Stock.php  User.php  Watchlist.php
server/app/Services/: CryptoService.php  StockService.php
server/config/: jwt.php
server/database/migrations/: 2022_12_27_181055_create_cryptos_table.php  (+16 more)
server/routes/: api.php
(+89 files in other folders)
